# cloud-translator

./: Cargo.toml  README.md
hack/: mod.sh
src/: main.rs  modules.rs
src/apis/: mod.rs
src/apis/aligenie/: mod.rs
src/apis/aligenie/v1/: mod.rs
src/apis/oauth/: mod.rs
src/apis/oauth/v2/: auth.rs  mod.rs  routes.rs  types.rs
src/apis/oauth/v2/fake/: fake.rs  mod.rs
src/runtime/: error.rs  mod.rs  object.rs
src/session/: mod.rs
src/storage/: mod.rs  storage.rs
src/storage/memory/: memory.rs  memory_test.rs  mod.rs
src/storage/sqlite/: mod.rs  sqlite.rs
