[package]
name = "cloud-translator"
version = "0.1.0"
authors = ["Wei Guo <me@imkira.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.21.0"
